tests/NormalTests/paczka1/small_fuzzy/26031787.err
Error in line 1: XYfxlSQE0X A677 36,9
Error in line 2: XYfxlSQE0X A274 25,0
Error in line 16: AMm4Uzdäz Aä74 6,4
